[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/World.gd" type="Script" id=1]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/Score.tres" type="DynamicFont" id=3]

[sub_resource type="Theme" id=1]

[node name="World" type="Node2D" groups=[
"Persist",
]]
script = ExtResource( 1 )

[node name="UI" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="Score" type="Label" parent="UI"]
margin_left = -40.0
margin_top = -278.0
margin_right = 32.0
margin_bottom = -264.0
theme = SubResource( 1 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScore" type="Label" parent="UI"]
margin_left = -450.0
margin_top = -278.0
margin_right = -378.0
margin_bottom = -202.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 1, 1 )
text = "0"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="WallSpawnTimer" type="Timer" parent="."]
[connection signal="death" from="Player" to="." method="_on_Player_death"]
[connection signal="ready" from="Player" to="." method="_on_Player_ready"]
[connection signal="score_point" from="Player" to="." method="_on_Player_score_point"]
[connection signal="timeout" from="WallSpawnTimer" to="." method="_on_WallSpawner_timeout"]
